// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorToolbar isDirty indicator should show the isDirty indicator when the isEdited is true 1`] = `
<div
  class="kogito--editor__toolbar-title"
  data-testid="toolbar-title"
>
  <h3
    class="pf-c-title pf-m-xl"
    data-ouia-component-id="OUIA-Generated-Title-1"
    data-ouia-component-type="PF4/Title"
    data-ouia-safe="true"
  >
    test
  </h3>
  <span
    class="kogito--editor__toolbar-edited"
    data-testid="is-dirty-indicator"
  >
     - Edited
  </span>
</div>
`;

exports[`EditorToolbar isDirty indicator shouldn't show the isDirty indicator when the isEdited is false 1`] = `
<div
  class="kogito--editor__toolbar-title"
  data-testid="toolbar-title"
>
  <h3
    class="pf-c-title pf-m-xl"
    data-ouia-component-id="OUIA-Generated-Title-2"
    data-ouia-component-type="PF4/Title"
    data-ouia-safe="true"
  >
    test
  </h3>
</div>
`;
